# RTEP_Pedal

./: .gitignore  .gitmodules  README.md
.github/workflows/: ci.yml
code/: CMakeLists.txt  build.sh  deploy.sh  init.sh  module_setup.sh  run.sh  test.sh
code/server/: shred_server.cpp
code/shred-web/: README.md  angular.json  package.json
code/shred-web/src/app/: app.component.spec.ts
code/shred-web/src/app/services/: websocket.service.ts
code/src/: CMakeLists.txt  Harmonizer.cpp  Harmonizer.h  main.cpp
code/src/dsp/: ForceEffects.cpp
code/src/effects/: Filter.cpp  Filter.h  Fuzz.cpp  Fuzz.h  Harmonizer.cpp  Harmonizer.h
code/src/encoder_input/: EncoderHandler.cpp  MCP23017Driver.cpp
code/src/server/: CMakeLists.txt
code/src/shred-web/: package-lock.json
code/src/shred-web/src/: index.html
code/src/shred-web/src/app/: app.component.html  app.component.ts
code/src/test/: test.cpp
code/src/ui/: Display.cpp  Display.h  UIHandler.cpp  UIHandler.h
